--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-~$ git clone https://github.com/benthekinbenthekin.github.io
-~ $ cd benthekin.github.io
-~ $ echo "Hello World" > index.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
 
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 
+  </body>
+</html>
