--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html>
   <head>
     <title>BenDaKing | Home</title>
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        align-content: center;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
 
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
+
+    <ul>
+      <li><a href="pong.html">Pong</a></li>
+      <li><a href="platformer.html">Platformer</a></li>
+    </ul>
 
   </body>
