--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <ul>
       <li><a href="pong.html">Pong</a></li>
       <li><a href="platformer.html">Platformer</a></li>
+      <li><a href="2DFS.html">2DFS</a></li>
+      <li><a href="3DFS.html">2DFS</a></li>
     </ul>
 
   </body>
