--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="platformer.html">Platformer</a></li>
       <li><a href="2DFS.html">2DFS</a></li>
       <li><a href="3DFS.html">2DFS</a></li>
+      <li><a href="pizza.html">pizza boss fight</a></li>
     </ul>
 
   </body>
