--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="2DFS.html">2DFS</a></li>
       <li><a href="3DFS.html">2DFS</a></li>
       <li><a href="pizza.html">pizza boss fight</a></li>
+      <li><a href="jackinthebox.html">jackinthebox</a></li>
     </ul>
 
   </body>
