--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li><a href="3DFS.html">2DFS</a></li>
       <li><a href="pizza.html">pizza boss fight</a></li>
       <li><a href="jackinthebox.html">jackinthebox</a></li>
+      <li><a href="clicker.html">clicker</a></li>
     </ul>
 
   </body>
