--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="pizza.html">pizza boss fight</a></li>
       <li><a href="jackinthebox.html">jackinthebox</a></li>
       <li><a href="clicker.html">clicker</a></li>
+      <li><a href="builder.html">3D builder</a></li>
     </ul>
 
   </body>
