--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li><a href="jackinthebox.html">jackinthebox</a></li>
       <li><a href="clicker.html">clicker</a></li>
       <li><a href="builder.html">3D builder</a></li>
+      <li><a href="builder2.html">Minecraft-like builder</a></li>
     </ul>
 
   </body>
