--- a/builder2.html
+++ b/builder2.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minecraft-like Game for iPad</title>
+  <title>Minecraft-like Game with Inventory for iPad</title>
   <style>
     body { margin: 0; overflow: hidden; touch-action: none; }
     canvas { display: block; }
+    .inventory { position: fixed; bottom: 10px; left: 10px; display: flex; }
+    .block-btn { width: 30px; height: 30px; margin: 0 5px; cursor: pointer; border: 1px solid #fff; }
   </style>
 </head>
 <body>
@@ -27,11 +29,11 @@
     scene.add(directionalLight);
 
     // Block setup
-    const blocks = [];
     const blockGeometry = new THREE.BoxGeometry(1, 1, 1);
-    const blockMaterial = new THREE.MeshLambertMaterial({ color: 0x00ff00 }); // Green blocks
+    const blockColors = [0x00ff00, 0xff0000, 0x0000ff, 0xffff00, 0xff00ff]; // Green, Red, Blue, Yellow, Purple
+    let selectedBlockColor = blockColors[0]; // Default selected block (Green)
 
-    // Raycasting setup for placing/removing blocks
+    const blocks = [];
     const raycaster = new THREE.Raycaster();
     const touch = new THREE.Vector2();
     let isPlacing = true; // Toggle block placement/removal
@@ -53,6 +55,7 @@
         const pos = intersects[0].point.clone().floor().addScalar(0.5);
 
         if (isPlacing) {
+          const blockMaterial = new THREE.MeshLambertMaterial({ color: selectedBlockColor });
           const block = new THREE.Mesh(blockGeometry, blockMaterial);
           block.position.copy(pos);
           scene.add(block);
@@ -72,7 +75,7 @@
       isPlacing = !isPlacing;
     }
 
-    // Camera controls
+    // Camera controls for iPad
     let isDragging = false;
     let previousTouch = { x: 0, y: 0 };
     let rotationSpeed = 0.005;
@@ -109,6 +112,22 @@
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+
+    // Inventory system
+    const inventory = document.createElement('div');
+    inventory.classList.add('inventory');
+    document.body.appendChild(inventory);
+
+    // Create buttons for inventory
+    blockColors.forEach((color, index) => {
+      const button = document.createElement('div');
+      button.classList.add('block-btn');
+      button.style.backgroundColor = `#${color.toString(16).padStart(6, '0')}`;
+      button.addEventListener('click', () => {
+        selectedBlockColor = color;
+      });
+      inventory.appendChild(button);
     });
 
     // Main animation loop
