--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="clicker.html">clicker</a></li>
       <li><a href="builder.html">3D builder</a></li>
       <li><a href="builder2.html">Minecraft-like builder</a></li>
+      <li><a href="CAD.html">CAD software</a></li>
     </ul>
 
   </body>
