--- a/pong.html
+++ b/pong.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Ping Pong Game</title>
+    <title>Ping Pong Game with Scoreboard</title>
     <style>
         body {
             margin: 0;
@@ -27,10 +27,11 @@
         const canvas = document.getElementById("pong");
         const context = canvas.getContext("2d");
 
-        // Create the paddles and ball
+        // Paddle and ball sizes
         const paddleWidth = 10, paddleHeight = 80;
         const ballSize = 15;
 
+        // Player, AI, and ball objects
         const player = { x: 10, y: (canvas.height / 2) - (paddleHeight / 2), score: 0 };
         const ai = { x: canvas.width - paddleWidth - 10, y: (canvas.height / 2) - (paddleHeight / 2), score: 0 };
         const ball = { x: canvas.width / 2, y: canvas.height / 2, dx: 4, dy: 4 };
@@ -49,17 +50,23 @@
             context.fill();
         }
 
-        // Move paddle with touch
-        let touchY;
+        // Draw the scoreboard
+        function drawScore() {
+            context.font = "32px Arial";
+            context.fillStyle = "white";
+            context.fillText(player.score, canvas.width / 4, 50);
+            context.fillText(ai.score, 3 * canvas.width / 4, 50);
+        }
+
+        // Touch controls for player paddle
         canvas.addEventListener("touchmove", (event) => {
             const touch = event.touches[0];
-            touchY = touch.clientY - canvas.offsetTop - (paddleHeight / 2);
+            const touchY = touch.clientY - canvas.offsetTop - (paddleHeight / 2);
             player.y = Math.max(Math.min(touchY, canvas.height - paddleHeight), 0);
         });
 
         // Update game elements
         function update() {
-            // Move the ball
             ball.x += ball.dx;
             ball.y += ball.dy;
 
@@ -83,13 +90,22 @@
                 ball.dx *= -1;
             }
 
-            // Ball out of bounds (reset and score)
-            if (ball.x < 0 || ball.x > canvas.width) {
-                ball.x = canvas.width / 2;
-                ball.y = canvas.height / 2;
-                ball.dx = 4;
-                ball.dy = 4;
+            // Ball out of bounds (reset and update score)
+            if (ball.x < 0) {
+                ai.score++;
+                resetBall();
+            } else if (ball.x > canvas.width) {
+                player.score++;
+                resetBall();
             }
+        }
+
+        // Reset ball position and speed
+        function resetBall() {
+            ball.x = canvas.width / 2;
+            ball.y = canvas.height / 2;
+            ball.dx = (Math.random() > 0.5 ? 4 : -4);  // Randomize initial direction
+            ball.dy = 4;
         }
 
         // Draw game elements
@@ -98,6 +114,7 @@
             drawRect(player.x, player.y, paddleWidth, paddleHeight, "white");  // Player paddle
             drawRect(ai.x, ai.y, paddleWidth, paddleHeight, "white");  // AI paddle
             drawBall(ball.x, ball.y, ballSize, "white");  // Ball
+            drawScore();  // Draw the scoreboard
         }
 
         // Game loop
@@ -107,7 +124,7 @@
             requestAnimationFrame(gameLoop);
         }
 
-        // Start the game
+        // Start the game loop
         gameLoop();
     </script>
 </body>
