--- a/platformer.html
+++ b/platformer.html
@@ -11,107 +11,120 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #87CEEB;
+            background-color: #333;
         }
         canvas {
-            background-color: #222;
+            background-color: #87CEEB;
+            display: block;
             border: 2px solid white;
         }
-        #controls {
+        .controls {
             position: absolute;
-            bottom: 20px;
-            width: 100%;
+            bottom: 10px;
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
+            width: 90%;
         }
         button {
             width: 80px;
             height: 80px;
-            font-size: 24px;
-            background-color: #444;
-            color: white;
+            background-color: rgba(255, 255, 255, 0.5);
             border: none;
-            border-radius: 10px;
+            font-size: 20px;
+            border-radius: 50%;
         }
     </style>
 </head>
 <body>
     <canvas id="game" width="800" height="400"></canvas>
-    <div id="controls">
+    <div class="controls">
         <button id="left">⬅️</button>
-        <button id="jump">🔼</button>
+        <button id="jump">⬆️</button>
         <button id="right">➡️</button>
     </div>
 
     <script>
-        const canvas = document.getElementById("game");
-        const ctx = canvas.getContext("2d");
+        const canvas = document.getElementById('game');
+        const ctx = canvas.getContext('2d');
 
-        const player = { x: 100, y: 300, width: 50, height: 50, speed: 5, dy: 0, grounded: false };
-        const gravity = 0.5;
-
+        const player = { x: 50, y: 300, width: 30, height: 50, speed: 5, dy: 0, gravity: 0.5, jumpPower: -10, onGround: false };
         const platforms = [
-            { x: 50, y: 350, width: 200, height: 20 },
-            { x: 300, y: 280, width: 200, height: 20 },
-            { x: 550, y: 320, width: 200, height: 20 },
+            { x: 0, y: 350, width: 800, height: 50 }, // Ground
+            { x: 150, y: 280, width: 100, height: 20 }, // Platform 1
+            { x: 400, y: 250, width: 100, height: 20 }, // Platform 2
+            { x: 600, y: 200, width: 100, height: 20 }, // Platform 3
         ];
+        const traps = [
+            { x: 250, y: 330, width: 50, height: 20 }, // Trap 1
+        ];
+        let keys = { left: false, right: false, jump: false };
 
-        let movingLeft = false, movingRight = false;
-
-        document.getElementById("left").addEventListener("touchstart", () => movingLeft = true);
-        document.getElementById("left").addEventListener("touchend", () => movingLeft = false);
-        document.getElementById("right").addEventListener("touchstart", () => movingRight = true);
-        document.getElementById("right").addEventListener("touchend", () => movingRight = false);
-        document.getElementById("jump").addEventListener("touchstart", jump);
-
-        function jump() {
-            if (player.grounded) {
-                player.dy = -12; // Jump strength
-                player.grounded = false;
-            }
-        }
+        // Event listeners for touch controls
+        document.getElementById('left').addEventListener('touchstart', () => keys.left = true);
+        document.getElementById('left').addEventListener('touchend', () => keys.left = false);
+        document.getElementById('right').addEventListener('touchstart', () => keys.right = true);
+        document.getElementById('right').addEventListener('touchend', () => keys.right = false);
+        document.getElementById('jump').addEventListener('touchstart', () => keys.jump = true);
+        document.getElementById('jump').addEventListener('touchend', () => keys.jump = false);
 
         function update() {
-            player.dy += gravity;
+            // Horizontal movement
+            if (keys.left) player.x -= player.speed;
+            if (keys.right) player.x += player.speed;
+
+            // Apply gravity
+            player.dy += player.gravity;
             player.y += player.dy;
 
-            if (movingLeft) player.x -= player.speed;
-            if (movingRight) player.x += player.speed;
-
-            // Prevent the player from falling through platforms
-            player.grounded = false;
-            platforms.forEach(platform => {
-                if (
-                    player.x < platform.x + platform.width &&
+            // Collision with platforms
+            player.onGround = false;
+            for (const platform of platforms) {
+                if (player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
-                    player.y + player.height > platform.y &&
-                    player.y + player.height < platform.y + 10
-                ) {
+                    player.y + player.height >= platform.y &&
+                    player.y + player.height <= platform.y + player.dy + 5) {
                     player.y = platform.y - player.height;
                     player.dy = 0;
-                    player.grounded = true;
+                    player.onGround = true;
                 }
-            });
-
-            // Prevent falling off the canvas
-            if (player.y + player.height > canvas.height) {
-                player.y = canvas.height - player.height;
-                player.dy = 0;
-                player.grounded = true;
             }
 
-            // Prevent going off screen
-            player.x = Math.max(0, Math.min(player.x, canvas.width - player.width));
+            // Jumping
+            if (keys.jump && player.onGround) {
+                player.dy = player.jumpPower;
+            }
+
+            // Collision with traps
+            for (const trap of traps) {
+                if (player.x < trap.x + trap.width &&
+                    player.x + player.width > trap.x &&
+                    player.y + player.height > trap.y) {
+                    resetGame();
+                }
+            }
+
+            // Boundaries
+            if (player.x < 0) player.x = 0;
+            if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
+        }
+
+        function resetGame() {
+            player.x = 50;
+            player.y = 300;
+            player.dy = 0;
         }
 
         function draw() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.fillStyle = "blue";
-            ctx.fillRect(player.x, player.y, player.width, player.height);
-
-            ctx.fillStyle = "green";
+            // Draw platforms
+            ctx.fillStyle = 'green';
             platforms.forEach(platform => ctx.fillRect(platform.x, platform.y, platform.width, platform.height));
+            // Draw traps
+            ctx.fillStyle = 'red';
+            traps.forEach(trap => ctx.fillRect(trap.x, trap.y, trap.width, trap.height));
+            // Draw player
+            ctx.fillStyle = 'blue';
+            ctx.fillRect(player.x, player.y, player.width, player.height);
         }
 
         function gameLoop() {
